# mini-siem

./: .gitignore  README.md  normalize.py  pyproject.toml  report.py  run.py
rules/: 00_windows_4625_burst.yml  01_powershell_encoded.yml  02_linux_ssh_bruteforce.yml  03_linux_sudo_fail.yml  04_linux_apparmor_denied.yml  05_linux_sudo_to_root.yml
src/mini-siem/: ingest.py
src/mini_siem/: engine.py  ingest.py  normalize.py
